# bone-fracture-detection

./: .gitignore  Makefile  README.md  data.dvc  distal-humerus-fracture-1_jpg.rf.831cb137cfcbde1079f86abd5f5f2867.jpg.dvc  main.py  params.yaml  pyproject.toml  server.py
.dvc/: config
src/: data_downloading.py  data_loading.py  data_processing.py  image_processing.ipynb  train.py
src/deployment/: api.py  streamlit.py
