[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bone_fracture_detection"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pip",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["bone_fracture_detection"]
include = ["pyproject.toml", "bone_fracture_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["bone_fracture_detection"]
force-sort-within-sections = true

